# webflow-python

./: .fernignore  README.md  pyproject.toml  reference.md
.fern/: metadata.json
.github/workflows/: ci.yml
.mock/: fern.config.json
.mock/definition/: __package__.yml  forms.yml  sites.yml
.mock/definition/collections/: items.yml
src/webflow/: __init__.py  client.py  environment.py  oauth.py  signature.py  version.py
src/webflow/core/: client_wrapper.py
src/webflow/errors/: __init__.py  internal_server_error.py  not_found_error.py  unauthorized_error.py
src/webflow/resources/: __init__.py
src/webflow/types/: __init__.py  access_group.py  access_group_list.py  application.py  asset.py  asset_folder.py  asset_folder_list.py  asset_upload.py  asset_upload_upload_details.py  asset_variant.py  assets.py  authorization.py  (+302 more)
tests/: conftest.py  test_access_groups.py  test_assets.py  test_client.py  test_collections.py  test_components.py  test_ecommerce.py  test_forms.py  test_inventory.py  test_orders.py  test_pages.py  test_products.py  test_redirects.py  test_robots_txt.py  test_scripts.py  test_site_plan.py  test_sites.py  test_token.py  test_users.py  test_webhooks.py  test_well_known.py
tests/collections/: test_fields.py  test_items.py
tests/pages/: test_scripts.py
tests/sites/: test_activity_logs.py  test_comments.py  test_forms.py  test_plans.py  test_redirects.py  test_robots_txt.py  test_scripts.py  test_well_known.py
tests/utils/: test_http_client.py  test_query_encoding.py  test_serialization.py
tests/workspaces/: test_audit_logs.py
(+178 files in other folders)
